infrastracture/application/cicd/gitlab/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  namespace: ci
  name: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
         claimName: gitlab
      - name: gitlab-rb
        configMap:
          name: gitlab.rb
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:latest
        ports:
        - name: https
          containerPort: 443
        - name: http
          containerPort: 80
        - name: ssh
          containerPort: 22
        volumeMounts:
        - name: gitlab-rb
          mountPath: /etc/gitlab
        - name: data
          mountPath: /var/opt/gitlab
