infrastracture/application/cicd/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: ci
spec:
  ports:
  - name: http
    port: 10080
    targetPort: 80
  - name: https
    port: 10443
    targetPort: 443
  - name: ssh
    port: 10022
    targetPort: 22
  selector:
    app: gitlab
  type: ClusterIP
