infrastracture/application/cicd/gitlab/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: ci
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  rules:
  - host: gitlab.ddforme.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: 10080
